--- a/libs/signing-webapp/feature-signing-form/src/lib/signing-webapp-feature-signing-form.component.html
+++ b/libs/signing-webapp/feature-signing-form/src/lib/signing-webapp-feature-signing-form.component.html
@@ -4,8 +4,8 @@
     label="Step 1.1: Upload the Leaf certificate"
     description="This is your end-entity certificate used for signing."
     [required]="true"
-    [acceptedMimeTypes]="acceptedMimeTypes.certificate"
-    [maxFileSizeBytes]="maxFileSizeBytes.certificate"
+    [acceptedMimeTypes]="CERTIFICATE_MIME_TYPES"
+    [maxFileSizeBytes]="CERTIFICATE_MAX_SIZE"
     [control]="signingForm.leafCertificate"
   />
 
@@ -14,28 +14,37 @@
     label="Step 1.2: Upload the Leaf private key"
     description="This is the private key corresponding to your Leaf certificate."
     [required]="true"
-    [acceptedMimeTypes]="acceptedMimeTypes.certificate"
-    [maxFileSizeBytes]="maxFileSizeBytes.certificate"
+    [acceptedMimeTypes]="CERTIFICATE_MIME_TYPES"
+    [maxFileSizeBytes]="CERTIFICATE_MAX_SIZE"
     [control]="signingForm.leafPrivateKey"
   />
 
   <lib-ui-upload-file-input
-    inputId="leaf-private-key-upload"
+    inputId="intermediate-certificate-upload"
     label="Step 1.3: Upload the Intermediate certificate"
     description="This certificate links your Leaf certificate to a trusted root."
     [required]="true"
-    [acceptedMimeTypes]="acceptedMimeTypes.certificate"
-    [maxFileSizeBytes]="maxFileSizeBytes.certificate"
+    [acceptedMimeTypes]="CERTIFICATE_MIME_TYPES"
+    [maxFileSizeBytes]="CERTIFICATE_MAX_SIZE"
+    [control]="signingForm.intermediateCertificate"
+  />
+
+  <lib-ui-upload-file-input
+    inputId="did-upload"
+    label="Step 2: Upload the DID document"
+    description="This document contains your decentralized identifier information."
+    [acceptedMimeTypes]="CERTIFICATE_MIME_TYPES"
+    [maxFileSizeBytes]="CERTIFICATE_MAX_SIZE"
     [control]="signingForm.intermediateCertificate"
   />
 
   <lib-ui-upload-file-input
     inputId="asset-upload"
-    label="Step 2: Upload the asset"
+    label="Step 3: Upload the asset"
     description="This certificate links your Leaf certificate to a trusted root."
     [required]="true"
-    [acceptedMimeTypes]="acceptedMimeTypes.asset"
-    [maxFileSizeBytes]="maxFileSizeBytes.asset"
+    [acceptedMimeTypes]="ASSET_MIME_TYPES"
+    [maxFileSizeBytes]="ASSET_MAX_SIZE"
     [control]="signingForm.assetFile"
   />
 </form>
