--- a/libs/signing-webapp/feature-signing-form/src/lib/signing-webapp-feature-signing-form.component.html
+++ b/libs/signing-webapp/feature-signing-form/src/lib/signing-webapp-feature-signing-form.component.html
@@ -4,8 +4,8 @@
     label="Step 1.1: Upload the Leaf certificate"
     description="This is your end-entity certificate used for signing."
     [required]="true"
-    [acceptedMimeTypes]="CERTIFICATE_MIME_TYPES"
-    [maxFileSizeBytes]="CERTIFICATE_MAX_SIZE"
+    [acceptedMimeTypes]="certificateMimeTypes"
+    [maxFileSizeBytes]="certificateMaxSize"
     [control]="signingForm.leafCertificate"
   />
 
@@ -14,8 +14,8 @@
     label="Step 1.2: Upload the Leaf private key"
     description="This is the private key corresponding to your Leaf certificate."
     [required]="true"
-    [acceptedMimeTypes]="CERTIFICATE_MIME_TYPES"
-    [maxFileSizeBytes]="CERTIFICATE_MAX_SIZE"
+    [acceptedMimeTypes]="certificateMimeTypes"
+    [maxFileSizeBytes]="certificateMaxSize"
     [control]="signingForm.leafPrivateKey"
   />
 
@@ -24,8 +24,8 @@
     label="Step 1.3: Upload the Intermediate certificate"
     description="This certificate links your Leaf certificate to a trusted root."
     [required]="true"
-    [acceptedMimeTypes]="CERTIFICATE_MIME_TYPES"
-    [maxFileSizeBytes]="CERTIFICATE_MAX_SIZE"
+    [acceptedMimeTypes]="certificateMimeTypes"
+    [maxFileSizeBytes]="certificateMaxSize"
     [control]="signingForm.intermediateCertificate"
   />
 
@@ -33,8 +33,8 @@
     inputId="did-upload"
     label="Step 2: Upload the DID document"
     description="This document contains your decentralized identifier information."
-    [acceptedMimeTypes]="CERTIFICATE_MIME_TYPES"
-    [maxFileSizeBytes]="CERTIFICATE_MAX_SIZE"
+    [acceptedMimeTypes]="didMimeTypes"
+    [maxFileSizeBytes]="didMaxSize"
     [control]="signingForm.intermediateCertificate"
   />
 
@@ -43,8 +43,8 @@
     label="Step 3: Upload the asset"
     description="This certificate links your Leaf certificate to a trusted root."
     [required]="true"
-    [acceptedMimeTypes]="ASSET_MIME_TYPES"
-    [maxFileSizeBytes]="ASSET_MAX_SIZE"
+    [acceptedMimeTypes]="assetMimeTypes"
+    [maxFileSizeBytes]="assetMaxSize"
     [control]="signingForm.assetFile"
   />
 </form>
