--- a/libs/signing-webapp/form/ui/upload-file-input/src/lib/signing-webapp-form-ui-upload-file-input.component.html
+++ b/libs/signing-webapp/form/ui/upload-file-input/src/lib/signing-webapp-form-ui-upload-file-input.component.html
@@ -12,7 +12,7 @@
   </div>
 
   <lib-shared-ui-file-upload
-    [id]="inputId()"
+    [fieldId]="inputId()"
     [acceptedMimeTypes]="acceptedMimeTypes()"
     [maxFileSizeBytes]="maxFileSizeBytes()"
     [formField]="control()"
