--- a/libs/signing-webapp/form/feature/detail/src/lib/signing-webapp-form-feature-detail.component.html
+++ b/libs/signing-webapp/form/feature/detail/src/lib/signing-webapp-form-feature-detail.component.html
@@ -1,5 +1,5 @@
 <form class="flex flex-col items-center gap-10">
-  <lib-ui-upload-file-input
+  <lib-signing-webapp-form-ui-upload-file-input
     inputId="leaf-certificate-upload"
     label="Step 1.1: Upload the Leaf certificate"
     description="This is your end-entity certificate used for signing."
@@ -9,7 +9,7 @@
     [control]="signingForm.leafCertificate"
   />
 
-  <lib-ui-upload-file-input
+  <lib-signing-webapp-form-ui-upload-file-input
     inputId="leaf-private-key-upload"
     label="Step 1.2: Upload the Leaf private key"
     description="This is the private key corresponding to your Leaf certificate."
@@ -19,7 +19,7 @@
     [control]="signingForm.leafPrivateKey"
   />
 
-  <lib-ui-upload-file-input
+  <lib-signing-webapp-form-ui-upload-file-input
     inputId="intermediate-certificate-upload"
     label="Step 1.3: Upload the Intermediate certificate"
     description="This certificate links your Leaf certificate to a trusted root."
@@ -29,16 +29,16 @@
     [control]="signingForm.intermediateCertificate"
   />
 
-  <lib-ui-upload-file-input
+  <lib-signing-webapp-form-ui-upload-file-input
     inputId="did-upload"
     label="Step 2: Upload the DID document"
     description="This document contains your decentralized identifier information."
     [acceptedMimeTypes]="didMimeTypes"
     [maxFileSizeBytes]="didMaxSize"
-    [control]="signingForm.intermediateCertificate"
+    [control]="signingForm.didFile"
   />
 
-  <lib-ui-upload-file-input
+  <lib-signing-webapp-form-ui-upload-file-input
     inputId="asset-upload"
     label="Step 3: Upload the asset"
     description="This certificate links your Leaf certificate to a trusted root."
